@@ -1,5 +1,11 @@
 $Id$
 
+Changes between 2.1 and 2.2:
+----------------------------
+  * Various portability fixes
+  * Fix off-by-one error in directory input
+  * Don't bail out on missing segments
+
 Changes between 2.0 and 2.1:
 ----------------------------
   * FreeBSD and Mac OS X support
